[gd_scene load_steps=8 format=2]

[ext_resource path="res://04_assets/fonts/abel-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://03_scripts/HELP.gd" type="Script" id=2]
[ext_resource path="res://04_assets/video/Feed Them All 2020-08-18 17-03-18.ogv" type="VideoStream" id=3]
[ext_resource path="res://04_assets/fonts/Themes/Interface.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="HELP" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="Plate" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.823529, 0, 0.823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="Plate"]
margin_left = 20.0
margin_top = 86.0
margin_right = 458.0
margin_bottom = 700.0
stream = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Plate"]
margin_left = 6.96144
margin_top = 17.0812
margin_right = 474.961
margin_bottom = 62.0812
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Plate/HBoxContainer"]
pause_mode = 2
margin_right = 182.0
margin_bottom = 45.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "BACK TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartVideo" type="Button" parent="Plate/HBoxContainer"]
margin_left = 186.0
margin_right = 252.0
margin_bottom = 45.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Pause" type="Button" parent="Plate/HBoxContainer"]
margin_left = 256.0
margin_right = 462.0
margin_bottom = 45.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "PAUSE/UNPAUSE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Plate/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Plate/HBoxContainer/StartVideo" to="." method="_on_StartVideo_pressed"]
[connection signal="pressed" from="Plate/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
